<resources>
    <string name="app_name">Emi Store App</string>
    <string name="title_activity_client">Client Activity</string>
    <string name="validate_internet">No tiene conexión a internet</string>
    <string name="error">Error</string>
    <string name="loading_message">Cargando...</string>
    <string name="option_cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="hint_client_name">Client Name</string>
    <string name="hint_client_last_name">Client Last Name</string>
    <string name="hint_client_identification">Identification</string>
    <string name="hint_client_city">City</string>
    <string name="hint_client_enable">Enable</string>

    <string-array name="cities_array">
        <item>Caucasia</item>
        <item>Medellín</item>
        <item>El Bagre</item>
        <item>Otro</item>
    </string-array>


    <string-array name="enables_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>



